k8s/deployments/postgres-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: cloudshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      tolerations:
      - key: "node-role"
        operator: "Equal"
        value: "db"
        effect: "NoSchedule"
      - key: "db-node"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: db
              topologyKey: kubernetes.io/hostname
      containers:
      - name: postgres
        image: postgres:15
        ports:
          - containerPort: 5432
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
