k8s/deployments/svc-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: cloudshop
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
